# BLAKER

./: .gitmodules  BLAKER_res.rc  Base64Int-test.cpp  BlakerQR.txt  CMakeLists.txt  LICENSE.txt  MAboutDlg.hpp  MBlakerScreen.hpp  MChooseOptionDlg.hpp  MDropSource.cpp  MDropSource.hpp  MPrintHelperEx.cpp  MScanImagesDlg.cpp  MScanImagesDlg.hpp  MScanningMovieDlg.hpp  MScreenImageDlg.hpp  MStartScreenDlg.cpp  MStartScreenDlg.hpp  QRCode.hpp  README.md  README.txt  READMEJP.md  READMEJP.txt  Renderer.hpp  TextToText.hpp  crc32.hpp  stdafx.hpp  tbz.hpp
lang/: en_US.rc
src/: BLAKER_res.rc  Base64Int.hpp  CMakeLists.txt  MAboutDlg.cpp  MBlakerApp.cpp  MBlakerApp.hpp  MBlakerScreen.cpp  MBlakerScreen.hpp  MChooseOptionDlg.cpp  MPrintHelper.hpp  MPrintHelperEx.hpp  MResizable.hpp  MScanningMovieDlg.cpp  MScreenImageDlg.cpp  MSettingsDlg.cpp  MSettingsDlg.hpp  MSpecialStatic.cpp  MSpecialStatic.hpp  QRCode.cpp  QRCode.hpp  Settings.hpp  crc32-test.cpp  resource.h  stdafx.hpp  tbz.cpp
src/lang/: en_US.rc  ja_JP.rc
